<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_view_location">View location</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="empty_forecast_text">No Weather Information Available</string>
    <string name="no_connectivity_text">No Network Connectivity</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <string name="pref_label_metric">Metric</string>
    <string name="pref_label_imperial">Imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Notification checkbox summaries -->
    <string name="pref_summary_notifications_enabled">Show notifications</string>
    <string name="pref_summary_notifications_disabled">Don\'t show notifications</string>

    <!-- Accessibility -->
    <string name="format_high_temperature_description">High <xliff:g id="temperature">%1$s</xliff:g></string>
    <string name="format_low_temperature_description">Low <xliff:g id="temperature">%1$s</xliff:g></string>
    <string name="format_forecast_item_description"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="weatherDescription">%2$s</xliff:g>, high <xliff:g id="highTemperature">%3$s</xliff:g>, low <xliff:g id="lowTemperature">%4$s</xliff:g></string>

    <!-- Do not translate the following strings -->
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">94043,usa</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="location_status_key">location_status_key</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_notifications_enabled">notificationsEnabled</string>
    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>
    <string name="server_down_text">Weather server is down</string>
    <string name="server_response_invalid_text">Couldn\'t understand server response</string>
    <string name="server_unknown_error_text">An unexpected error occurred while syncing</string>
    <string name="today_widget_label">@string/app_name</string>
</resources>
