<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />
    <ListPreference
        android:title="Units"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/prefs_units_entries"
        android:entryValues="@array/prefs_units_entryvalues" />
    <CheckBoxPreference
        android:title="Weather notifications"
        android:key="@string/pref_notifications_enabled"
        android:defaultValue="true"
        android:summaryOn="@string/pref_summary_notifications_enabled"
        android:summaryOff="@string/pref_summary_notifications_disabled" />

</PreferenceScreen>